k3s/kong-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kong-database
  name: kong-database
  namespace: egs-uniride
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong-database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: kong-database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: kong
            - name: POSTGRES_PASSWORD
              value: kong
            - name: POSTGRES_USER
              value: kong
          image: postgres:9.6
          name: kong-database
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data-kong-postgres
              subPath: postgres
      restartPolicy: Always
      volumes:
        - name: db-data-kong-postgres
          persistentVolumeClaim:
            claimName: db-data-kong-postgres
status: {}
