k3s/kong-migrations-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/kong-net: "true"
    io.kompose.service: kong-migrations
  name: kong-migrations
  namespace: egs-uniride
spec:
  containers:
    - args:
        - kong
        - migrations
        - bootstrap
      image: kong
      name: kong-migrations
      resources: {}
  restartPolicy: OnFailure
status: {}
