k3s/kong-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/kong-net: "true"
    io.kompose.service: kong
  name: kong
  namespace: egs-uniride
spec:
  containers:
    - env:
        - name: KONG_ADMIN_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_ADMIN_ERROR_LOG
          value: /dev/stderr
        - name: KONG_ADMIN_LISTEN
          value: 0.0.0.0:8001, 0.0.0.0:8444 ssl
        - name: KONG_CASSANDRA_CONTACT_POINTS
          value: kong-database
        - name: KONG_DATABASE
          value: postgres
        - name: KONG_PG_HOST
          value: kong-database
        - name: KONG_PG_PASSWORD
          value: kong
        - name: KONG_PG_USER
          value: kong
        - name: KONG_PROXY_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_PROXY_ERROR_LOG
          value: /dev/stderr
        - name: LC_ALL
          value: en_US.UTF-8
        - name: LC_CTYPE
          value: en_US.UTF-8
      image: kong
      name: kong
      ports:
        - containerPort: 8000
        - containerPort: 8443
        - containerPort: 8001
        - containerPort: 8444
      resources: {}
  restartPolicy: OnFailure
status: {}
