k3s/konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: konga
  name: konga
  namespace: egs-uniride
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: konga
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: konga
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: pantsel/konga
          name: konga
          ports:
            - containerPort: 1337
          resources: {}
      restartPolicy: Always
status: {}
