k3s/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
  namespace: egs-uniride
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8443"
      port: 8443
      targetPort: 8443
    - name: "8001"
      port: 8001
      targetPort: 8001
    - name: "8444"
      port: 8444
      targetPort: 8444
  selector:
    io.kompose.service: kong
status:
  loadBalancer: {}
